Setup Update, Create and Delete Chirp API
